kubernetes/homelab/applications/kserve/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: kserve
---
apiVersion: v1
kind: Namespace
metadata:
  name: ai-inference
